--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="renderer" content="webkit">    <title>订餐系统</title>
 
-    <link rel="stylesheet" href="/order/static/pkg/all_761b66c.css" />
+    <link rel="stylesheet" href="/order/static/pkg/all_8918526.css" />
 </head>
 <body id="app" >
 <router-view  keep-alive></router-view>
@@ -166,7 +166,8 @@ require.resourceMap({
         "component_modules/mui.previewimage",
         "component_modules/mui.lazyload",
         "component_modules/mui.lazyload.img",
-        "nav/nav"
+        "nav/nav",
+        "ok/ok"
       ],
       "pkg": "p1"
     },
@@ -226,7 +227,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_f264eb0.js",
+      "url": "/order/static/pkg/app_5d844df.js",
       "type": "js"
     }
   }
