--- a/src/main/resources/webapp/order/admin/index.html
+++ b/src/main/resources/webapp/order/admin/index.html
@@ -17,7 +17,7 @@
 </header>
 <section>
     <c-nav></c-nav>
-    <router-view transition="slide" transition-mode="out-in" keep-alive></router-view>
+    <router-view transition="slide" transition-mode="out-in" ></router-view>
 </section>
 <script src="/order/admin/static/js/mod.js"></script>
 <script>/*resourcemap*/
@@ -255,7 +255,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/admin/static/pkg/app_13809bd.js",
+      "url": "/order/admin/static/pkg/app_9e282f6.js",
       "type": "js"
     }
   }
