--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="renderer" content="webkit">    <title>订餐系统</title>
 
-    <link rel="stylesheet" href="/order/static/pkg/all_fdccd94.css" />
+    <link rel="stylesheet" href="/order/static/pkg/all_90ddfc0.css" />
 </head>
 <body id="app" >
 <router-view  keep-alive></router-view>
@@ -196,7 +196,8 @@ require.resourceMap({
       "type": "js",
       "deps": [
         "component_modules/vue",
-        "nav/nav"
+        "nav/nav",
+        "main/service"
       ],
       "pkg": "p1"
     },
@@ -227,7 +228,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_c8f41cd.js",
+      "url": "/order/static/pkg/app_4ffa96e.js",
       "type": "js"
     }
   }
