--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="renderer" content="webkit">    <title>订餐系统</title>
 
-    <link rel="stylesheet" href="/order/static/pkg/all_90ddfc0.css" />
+    <link rel="stylesheet" href="/order/static/pkg/all_90ab793.css" />
 </head>
 <body id="app" >
 <router-view  keep-alive></router-view>
@@ -43,6 +43,11 @@ require.resourceMap({
       "deps": [
         "component_modules/leaflet-src"
       ],
+      "pkg": "p0"
+    },
+    "component_modules/mui.dtpicker": {
+      "url": "/order/static/component_modules/mui.dtpicker.js",
+      "type": "js",
       "pkg": "p0"
     },
     "component_modules/mui": {
@@ -224,11 +229,11 @@ require.resourceMap({
   },
   "pkg": {
     "p0": {
-      "url": "/order/static/pkg/common_1089079.js",
+      "url": "/order/static/pkg/common_80bf241.js",
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_4ffa96e.js",
+      "url": "/order/static/pkg/app_6996c66.js",
       "type": "js"
     }
   }
