--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="renderer" content="webkit">    <title>订餐系统</title>
 
-    <link rel="stylesheet" href="/order/static/pkg/all_7b117d8.css" />
+    <link rel="stylesheet" href="/order/static/pkg/all_e66152b.css" />
 </head>
 <body id="app" >
 <router-view  keep-alive></router-view>
@@ -233,13 +233,13 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_9ac5af9.js",
+      "url": "/order/static/pkg/app_774ac5d.js",
       "type": "js"
     }
   }
 });</script>
 <script src="http://weui.github.io/weui/zepto.min.js"></script>
-<script src="/order/static/js/layer/layer.js"></script>
+<script src="/order/static/js/layer/layer.js?v=1"></script>
 <script src="/order/static/js/fastclick.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
