--- a/src/main/resources/webapp/order/admin/index.html
+++ b/src/main/resources/webapp/order/admin/index.html
@@ -156,6 +156,17 @@ require.resourceMap({
       ],
       "pkg": "p1"
     },
+    "components/page/order/stat/stat": {
+      "url": "/order/admin/static/components/page/order/stat/stat.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form",
+        "state/state"
+      ],
+      "pkg": "p1"
+    },
     "components/page/order/order": {
       "url": "/order/admin/static/components/page/order/order.js",
       "type": "js",
@@ -163,7 +174,8 @@ require.resourceMap({
         "component_modules/vue",
         "main/service",
         "form/form",
-        "state/state"
+        "state/state",
+        "components/page/order/stat/stat"
       ],
       "pkg": "p1"
     },
@@ -238,6 +250,17 @@ require.resourceMap({
       ],
       "pkg": "p1"
     },
+    "components/page/gOrder/stat/stat": {
+      "url": "/order/admin/static/components/page/gOrder/stat/stat.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form",
+        "state/state"
+      ],
+      "pkg": "p1"
+    },
     "components/page/gOrder/order": {
       "url": "/order/admin/static/components/page/gOrder/order.js",
       "type": "js",
@@ -245,7 +268,8 @@ require.resourceMap({
         "component_modules/vue",
         "main/service",
         "form/form",
-        "state/state"
+        "state/state",
+        "components/page/gOrder/stat/stat"
       ],
       "pkg": "p1"
     },
@@ -265,7 +289,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/admin/static/pkg/app_cce0d68.js",
+      "url": "/order/admin/static/pkg/app_89529c1.js",
       "type": "js"
     }
   }
