--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -233,13 +233,13 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_774ac5d.js",
+      "url": "/order/static/pkg/app_792f610.js",
       "type": "js"
     }
   }
 });</script>
 <script src="http://weui.github.io/weui/zepto.min.js"></script>
-<script src="/order/static/js/layer/layer.js?v=1"></script>
+<script src="/order/static/js/layer/layer.js"></script>
 <script src="/order/static/js/fastclick.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
