--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -238,7 +238,7 @@ require.resourceMap({
     }
   }
 });</script>
-<script src="http://weui.github.io/weui/zepto.min.js"></script>
+<script src="http://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
 <script src="/order/static/js/layer/layer.js"></script>
 <script src="/order/static/js/fastclick.js"></script>
 <script type="text/javascript">
