--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -240,7 +240,7 @@ require.resourceMap({
 });</script>
 <script src="http://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
 <script src="/order/static/js/layer/layer.js"></script>
-<script src="/order/static/js/fastclick.js"></script>
+<script src="/order/static/js/fastclick.js?v=1"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
