--- a/src/main/resources/webapp/order/admin/index.html
+++ b/src/main/resources/webapp/order/admin/index.html
@@ -261,6 +261,17 @@ require.resourceMap({
       ],
       "pkg": "p1"
     },
+    "components/page/gOrder/weekstat/weekstat": {
+      "url": "/order/admin/static/components/page/gOrder/weekstat/weekstat.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form",
+        "state/state"
+      ],
+      "pkg": "p1"
+    },
     "components/page/gOrder/order": {
       "url": "/order/admin/static/components/page/gOrder/order.js",
       "type": "js",
@@ -269,7 +280,8 @@ require.resourceMap({
         "main/service",
         "form/form",
         "state/state",
-        "components/page/gOrder/stat/stat"
+        "components/page/gOrder/stat/stat",
+        "components/page/gOrder/weekstat/weekstat"
       ],
       "pkg": "p1"
     },
@@ -289,7 +301,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/admin/static/pkg/app_89529c1.js",
+      "url": "/order/admin/static/pkg/app_ea276fe.js",
       "type": "js"
     }
   }
