--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -225,6 +225,16 @@ require.resourceMap({
         "nav/nav"
       ],
       "pkg": "p1"
+    },
+    "components/page/list/good/good": {
+      "url": "/order/static/components/page/list/good/good.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "nav/nav"
+      ],
+      "pkg": "p1"
     }
   },
   "pkg": {
@@ -233,14 +243,14 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_f94ec55.js",
+      "url": "/order/static/pkg/app_666a846.js",
       "type": "js"
     }
   }
 });</script>
 <script src="http://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
 <script src="/order/static/js/layer/layer.js"></script>
-<script src="/order/static/js/fastclick.js?v=1"></script>
+<script src="/order/static/js/fastclick.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
