--- a/src/main/resources/webapp/order/admin/index.html
+++ b/src/main/resources/webapp/order/admin/index.html
@@ -3,34 +3,48 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="renderer" content="webkit">    <title>订餐系统</title>
+    <meta name="renderer" content="webkit" />    <title>订餐系统</title>
+    <style>
 
-    <link rel="stylesheet" href="/order/static/pkg/all_12f08b5.css" />
+    </style>
+
+
+    <link rel="stylesheet" href="/order/admin/static/pkg/all_bbcce0b.css" />
 </head>
 <body id="app" >
-<router-view  keep-alive></router-view><!--<script src="/static/js/fastclick.js"></script>-->
-<script src="/order/static/js/mod.js"></script>
+<header>
+    <c-header :view="store.view"></c-header>
+</header>
+<section>
+    <c-nav></c-nav>
+    <router-view transition="slide" transition-mode="out-in" ></router-view>
+</section>
+<script src="/order/admin/static/js/mod.js"></script>
 <script>/*resourcemap*/
 require.resourceMap({
   "res": {
     "component_modules/vue": {
-      "url": "/order/static/component_modules/vue.js",
+      "url": "/order/admin/static/component_modules/vue.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/date": {
-      "url": "/order/static/component_modules/date.js",
+      "url": "/order/admin/static/component_modules/date.js",
+      "type": "js",
+      "pkg": "p0"
+    },
+    "component_modules/echarts.min": {
+      "url": "/order/admin/static/component_modules/echarts.min.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/leaflet-src": {
-      "url": "/order/static/component_modules/leaflet-src.js",
+      "url": "/order/admin/static/component_modules/leaflet-src.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/leaflet.draw-src": {
-      "url": "/order/static/component_modules/leaflet.draw-src.js",
+      "url": "/order/admin/static/component_modules/leaflet.draw-src.js",
       "type": "js",
       "deps": [
         "component_modules/leaflet-src"
@@ -38,73 +52,70 @@ require.resourceMap({
       "pkg": "p0"
     },
     "component_modules/leaflet.zoomify": {
-      "url": "/order/static/component_modules/leaflet.zoomify.js",
+      "url": "/order/admin/static/component_modules/leaflet.zoomify.js",
       "type": "js",
       "deps": [
         "component_modules/leaflet-src"
       ],
       "pkg": "p0"
     },
-    "component_modules/mui.dtpicker": {
-      "url": "/order/static/component_modules/mui.dtpicker.js",
-      "type": "js",
-      "pkg": "p0"
-    },
     "component_modules/mui": {
-      "url": "/order/static/component_modules/mui.js",
-      "type": "js",
-      "pkg": "p0"
-    },
-    "component_modules/mui.lazyload.img": {
-      "url": "/order/static/component_modules/mui.lazyload.img.js",
-      "type": "js",
-      "pkg": "p0"
-    },
-    "component_modules/mui.lazyload": {
-      "url": "/order/static/component_modules/mui.lazyload.js",
-      "type": "js",
-      "pkg": "p0"
-    },
-    "component_modules/mui.previewimage": {
-      "url": "/order/static/component_modules/mui.previewimage.js",
-      "type": "js",
-      "pkg": "p0"
-    },
-    "component_modules/mui.zoom": {
-      "url": "/order/static/component_modules/mui.zoom.js",
+      "url": "/order/admin/static/component_modules/mui.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/vue-router": {
-      "url": "/order/static/component_modules/vue-router.js",
+      "url": "/order/admin/static/component_modules/vue-router.js",
+      "type": "js",
+      "pkg": "p0"
+    },
+    "component_modules/vue-validator": {
+      "url": "/order/admin/static/component_modules/vue-validator.js",
       "type": "js",
       "pkg": "p0"
     },
     "main/service": {
-      "url": "/order/static/components/component/main/service.js",
+      "url": "/order/admin/static/components/component/main/service.js",
       "type": "js",
       "pkg": "p1"
     },
-    "nav/nav": {
-      "url": "/order/static/components/component/nav/nav.js",
+    "form/form": {
+      "url": "/order/admin/static/components/component/form/form.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
       ],
       "pkg": "p1"
     },
-    "components/page/order/order": {
-      "url": "/order/static/components/page/order/order.js",
+    "header/header": {
+      "url": "/order/admin/static/components/component/header/header.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue"
+      ],
+      "pkg": "p1"
+    },
+    "nav/nav": {
+      "url": "/order/admin/static/components/component/nav/nav.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/stat/stat": {
+      "url": "/order/admin/static/components/page/stat/stat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
+        "component_modules/echarts.min",
         "nav/nav"
       ],
       "pkg": "p1"
     },
     "components/page/loading/loading": {
-      "url": "/order/static/components/page/loading/loading.js",
+      "url": "/order/admin/static/components/page/loading/loading.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -112,126 +123,173 @@ require.resourceMap({
       "pkg": "p1"
     },
     "main/main": {
-      "url": "/order/static/components/component/main/main.js",
+      "url": "/order/admin/static/components/component/main/main.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "component_modules/vue-router",
-        "components/page/order/order",
+        "components/page/stat/stat",
         "components/page/loading/loading",
-        "main/service"
+        "header/header",
+        "component_modules/vue-validator"
       ],
       "pkg": "p1"
     },
-    "components/page/order/table/table": {
-      "url": "/order/static/components/page/order/table/table.js",
+    "components/page/table/table": {
+      "url": "/order/admin/static/components/page/table/table.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
-        "main/service",
         "component_modules/leaflet-src",
+        "main/service",
         "component_modules/leaflet.zoomify",
         "component_modules/leaflet.draw-src",
-        "nav/nav"
+        "form/form"
       ],
       "pkg": "p1"
     },
-    "ok/ok": {
-      "url": "/order/static/components/component/ok/ok.js",
+    "state/state": {
+      "url": "/order/admin/static/components/component/state/state.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
       ],
       "pkg": "p1"
     },
-    "components/page/goods/goods": {
-      "url": "/order/static/components/page/goods/goods.js",
+    "components/page/order/stat/stat": {
+      "url": "/order/admin/static/components/page/order/stat/stat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
-        "component_modules/mui",
-        "component_modules/mui.zoom",
-        "component_modules/mui.previewimage",
-        "component_modules/mui.lazyload",
-        "component_modules/mui.lazyload.img",
-        "ok/ok",
-        "nav/nav"
+        "form/form",
+        "state/state"
       ],
       "pkg": "p1"
     },
-    "components/page/food/food": {
-      "url": "/order/static/components/page/food/food.js",
+    "components/page/order/order": {
+      "url": "/order/admin/static/components/page/order/order.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
-        "component_modules/mui",
-        "component_modules/mui.zoom",
-        "component_modules/mui.previewimage",
-        "component_modules/mui.lazyload",
-        "component_modules/mui.lazyload.img",
-        "nav/nav",
-        "ok/ok"
+        "form/form",
+        "state/state",
+        "components/page/order/stat/stat"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/order/detail/detail": {
+      "url": "/order/admin/static/components/page/order/detail/detail.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/gOrder/detail/detail": {
+      "url": "/order/admin/static/components/page/gOrder/detail/detail.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form"
       ],
       "pkg": "p1"
     },
     "components/page/notice/notice": {
-      "url": "/order/static/components/page/notice/notice.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service",
-        "nav/nav"
-      ],
-      "pkg": "p1"
-    },
-    "components/page/notice/detail/detail": {
-      "url": "/order/static/components/page/notice/detail/detail.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service",
-        "nav/nav"
-      ],
-      "pkg": "p1"
-    },
-    "components/page/config/config": {
-      "url": "/order/static/components/page/config/config.js",
+      "url": "/order/admin/static/components/page/notice/notice.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "nav/nav",
+        "form/form",
         "main/service"
       ],
       "pkg": "p1"
     },
+    "components/page/notice/add/add": {
+      "url": "/order/admin/static/components/page/notice/add/add.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "nav/nav",
+        "form/form"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/config/config": {
+      "url": "/order/admin/static/components/page/config/config.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "nav/nav"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/menu/menu": {
+      "url": "/order/admin/static/components/page/menu/menu.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/goods/goods": {
+      "url": "/order/admin/static/components/page/goods/goods.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/gOrder/stat/stat": {
+      "url": "/order/admin/static/components/page/gOrder/stat/stat.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form",
+        "state/state"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/gOrder/weekstat/weekstat": {
+      "url": "/order/admin/static/components/page/gOrder/weekstat/weekstat.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form",
+        "state/state"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/gOrder/order": {
+      "url": "/order/admin/static/components/page/gOrder/order.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form",
+        "state/state",
+        "components/page/gOrder/stat/stat",
+        "components/page/gOrder/weekstat/weekstat"
+      ],
+      "pkg": "p1"
+    },
     "components/page/list/list": {
-      "url": "/order/static/components/page/list/list.js",
+      "url": "/order/admin/static/components/page/list/list.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
-        "main/service",
-        "nav/nav"
-      ],
-      "pkg": "p1"
-    },
-    "components/page/list/food/food": {
-      "url": "/order/static/components/page/list/food/food.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service",
-        "nav/nav"
-      ],
-      "pkg": "p1"
-    },
-    "components/page/list/good/good": {
-      "url": "/order/static/components/page/list/good/good.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service",
         "nav/nav"
       ],
       "pkg": "p1"
@@ -239,17 +297,21 @@ require.resourceMap({
   },
   "pkg": {
     "p0": {
-      "url": "/order/static/pkg/common_80bf241.js",
+      "url": "/order/admin/static/pkg/common_edc232b.js",
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_bac6ac7.js",
+      "url": "/order/admin/static/pkg/app_5dd4713.js",
       "type": "js"
     }
   }
 });</script>
-<script src="http://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
-<script src="/order/static/js/layer/layer.js"></script>
+<script src="/order/admin/static/js/jquery.js"></script>
+<script src="/order/admin/static/js/layer/layer.js"></script>
+<script src="/order/admin/static/js/layer/extend/layer.ext.js"></script>
+<script src="/order/admin/static/js/laydate/laydate.js"></script>
+<script src="/order/admin/static/js/jquery.jqprint-0.3.js"></script>
+<script src="/order/admin/static/js/bootstrap.min.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
