--- a/src/main/resources/webapp/order/admin/index.html
+++ b/src/main/resources/webapp/order/admin/index.html
@@ -9,7 +9,7 @@
     </style>
 
 
-    <link rel="stylesheet" href="/order/admin/static/pkg/all_bbcce0b.css" />
+    <link rel="stylesheet" href="/order/admin/static/pkg/all_1f73125.css" />
 </head>
 <body id="app" >
 <header>
@@ -17,7 +17,7 @@
 </header>
 <section>
     <c-nav></c-nav>
-    <router-view transition="slide" transition-mode="out-in" ></router-view>
+    <router-view transition="slide" transition-mode="out-in" keep-alive></router-view>
 </section>
 <script src="/order/admin/static/js/mod.js"></script>
 <script>/*resourcemap*/
@@ -297,11 +297,11 @@ require.resourceMap({
   },
   "pkg": {
     "p0": {
-      "url": "/order/admin/static/pkg/common_edc232b.js",
+      "url": "/order/admin/static/pkg/common_9322ffd.js",
       "type": "js"
     },
     "p1": {
-      "url": "/order/admin/static/pkg/app_5dd4713.js",
+      "url": "/order/admin/static/pkg/app_2461a31.js",
       "type": "js"
     }
   }
