--- a/src/main/resources/webapp/order/admin/static/index.html
+++ b/src/main/resources/webapp/order/admin/static/index.html
@@ -264,7 +264,7 @@ require.resourceMap({
 <script src="/order/admin/static/js/layer/layer.js"></script>
 <script src="/order/admin/static/js/layer/extend/layer.ext.js"></script>
 <script src="/order/admin/static/js/laydate/laydate.js"></script>
-<script src="/order/admin/static/js/jquery.jqprint-0.3.js"></script>
+<script src="/order/admin/static/js/jquery.jqprint-0.3.js?v=2"></script>
 <script src="/order/admin/static/js/bootstrap.min.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
