--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="app" class="wrap" >
         <div v-component="{{currentView}}" keep-alive></div>
-    </div>
+    </div>f
 
 <script src="/static/js/mod.js"></script>
 <script>/*resourcemap*/
@@ -203,7 +203,7 @@ require.resourceMap({
   },
   "pkg": {
     "p1": {
-      "url": "/static/pkg/app_f113f18.js",
+      "url": "/static/pkg/app_b276bbf.js",
       "type": "js"
     }
   }
