--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>通勤车安全乘坐公众平台</title>
 
-    <link rel="stylesheet" href="/static/pkg/all_4297859.css" />
+    <link rel="stylesheet" href="/static/pkg/all_414b311.css" />
 </head>
 <body>
     <div id="app" class="wrap" >
@@ -203,7 +203,7 @@ require.resourceMap({
   },
   "pkg": {
     "p1": {
-      "url": "/static/pkg/app_b276bbf.js",
+      "url": "/static/pkg/app_b5351cd.js",
       "type": "js"
     }
   }
