--- a/src/main/resources/webapp/bus/admin/login.html
+++ b/src/main/resources/webapp/bus/admin/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>通勤车安全乘坐管理平台</title>
 
-    <link rel="stylesheet" href="/admin/static/pkg/all.css" />
+    <link rel="stylesheet" href="/bus/static/pkg/all_4a5a288.css" />
 </head>
 <body class="page-login">
     <div class="wrap container">
@@ -17,7 +17,7 @@
                     </span>
                 </div>
                 <br><br>
-                <form action="/admin/user/login.json" method="post">
+                <form action="/bus/admin/user/login.json" method="post">
                     <div class="panel">
                         <div class="panel-head"><strong>登录框</strong></div>
                         <div class="panel-body" style="padding:30px;">
@@ -43,7 +43,7 @@
     </div>
 <div class="video-wrap">
     <video poster="#" preload="none" loop="" autoplay="" muted="" >
-        <source src="/admin/static/images/explore.mp4" type="video/mp4">
+        <source src="/bus/static/images/explore.mp4" type="video/mp4">
     </video>
     <div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
 </div>
