--- a/src/main/resources/webapp/bus/admin/index.html
+++ b/src/main/resources/webapp/bus/admin/index.html
@@ -7,7 +7,7 @@
     <meta name="renderer" content="webkit"><title>通勤车安全乘坐管理平台</title>
     
 
-    <link rel="stylesheet" href="/admin/static/pkg/all.css" />
+    <link rel="stylesheet" href="/bus/static/pkg/all_4a5a288.css" />
     <style>
         .admin-nav ul {
             display: none;
@@ -22,91 +22,153 @@
     <c-loading show="{{loading}}"></c-loading>
 </div>
 
-<script src="/admin/static/js/mod.js"></script>
+<script src="/bus/static/js/mod.js"></script>
 <script>/*resourcemap*/
 require.resourceMap({
   "res": {
     "component_modules/vue": {
-      "url": "/admin/static/component_modules/vue.js",
-      "type": "js"
+      "url": "/bus/static/component_modules/vue.js",
+      "type": "js",
+      "pkg": "p0"
+    },
+    "component_modules/director": {
+      "url": "/bus/static/component_modules/director.js",
+      "type": "js",
+      "pkg": "p0"
+    },
+    "component_modules/iscroll-zoom": {
+      "url": "/bus/static/component_modules/iscroll-zoom.js",
+      "type": "js",
+      "pkg": "p0"
+    },
+    "component_modules/jquery.min": {
+      "url": "/bus/static/component_modules/jquery.min.js",
+      "type": "js",
+      "pkg": "p0"
+    },
+    "component_modules/marked": {
+      "url": "/bus/static/component_modules/marked.js",
+      "type": "js",
+      "pkg": "p0"
     },
     "main/service": {
-      "url": "/admin/static/components/component/main/service.js",
-      "type": "js"
+      "url": "/bus/static/components/component/main/service.js",
+      "type": "js",
+      "pkg": "p2"
     },
-    "main/check": {
-      "url": "/admin/static/components/component/main/check.js",
-      "type": "js"
-    },
-    "pager/pager": {
-      "url": "/admin/static/components/component/pager/pager.js",
+    "loading/loading": {
+      "url": "/bus/static/components/component/loading/loading.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
-      ]
+      ],
+      "pkg": "p2"
+    },
+    "main/check": {
+      "url": "/bus/static/components/component/main/check.js",
+      "type": "js",
+      "pkg": "p2"
+    },
+    "nav/nav": {
+      "url": "/bus/static/components/component/nav/nav.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue"
+      ],
+      "pkg": "p2"
+    },
+    "main/main": {
+      "url": "/bus/static/components/component/main/main.js",
+      "type": "js",
+      "deps": [
+        "component_modules/director",
+        "main/service",
+        "loading/loading",
+        "nav/nav"
+      ],
+      "pkg": "p2"
+    },
+    "pager/pager": {
+      "url": "/bus/static/components/component/pager/pager.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue"
+      ],
+      "pkg": "p2"
     },
     "components/page/user/user": {
-      "url": "/admin/static/components/page/user/user.js",
+      "url": "/bus/static/components/page/user/user.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
         "main/check",
         "pager/pager"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/bus/bus": {
-      "url": "/admin/static/components/page/bus/bus.js",
+      "url": "/bus/static/components/page/bus/bus.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
         "main/check",
         "pager/pager"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/order/order": {
-      "url": "/admin/static/components/page/order/order.js",
+      "url": "/bus/static/components/page/order/order.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service"
-      ]
+      ],
+      "pkg": "p2"
+    },
+    "components/page/desk/desk": {
+      "url": "/bus/static/components/page/desk/desk.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service"
+      ],
+      "pkg": "p2"
     },
     "components/page/company/company": {
-      "url": "/admin/static/components/page/company/company.js",
+      "url": "/bus/static/components/page/company/company.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
         "main/check",
         "pager/pager"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/companyOrder/ticketsStats/ticketsStats": {
-      "url": "/admin/static/components/page/companyOrder/ticketsStats/ticketsStats.js",
+      "url": "/bus/static/components/page/companyOrder/ticketsStats/ticketsStats.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service"
-      ]
-    },
-    "component_modules/iscroll-zoom": {
-      "url": "/admin/static/component_modules/iscroll-zoom.js",
-      "type": "js"
+      ],
+      "pkg": "p2"
     },
     "components/page/companyOrder/busSeat/busSeat": {
-      "url": "/admin/static/components/page/companyOrder/busSeat/busSeat.js",
+      "url": "/bus/static/components/page/companyOrder/busSeat/busSeat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
         "main/check",
         "component_modules/iscroll-zoom"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/companyOrder/companyOrder": {
-      "url": "/admin/static/components/page/companyOrder/companyOrder.js",
+      "url": "/bus/static/components/page/companyOrder/companyOrder.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -114,28 +176,31 @@ require.resourceMap({
         "main/check",
         "components/page/companyOrder/ticketsStats/ticketsStats",
         "components/page/companyOrder/busSeat/busSeat"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/check/ticketsStats/ticketsStats": {
-      "url": "/admin/static/components/page/check/ticketsStats/ticketsStats.js",
+      "url": "/bus/static/components/page/check/ticketsStats/ticketsStats.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/check/busSeat/busSeat": {
-      "url": "/admin/static/components/page/check/busSeat/busSeat.js",
+      "url": "/bus/static/components/page/check/busSeat/busSeat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
         "main/check",
         "component_modules/iscroll-zoom"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/check/check": {
-      "url": "/admin/static/components/page/check/check.js",
+      "url": "/bus/static/components/page/check/check.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -143,81 +208,69 @@ require.resourceMap({
         "main/check",
         "components/page/check/ticketsStats/ticketsStats",
         "components/page/check/busSeat/busSeat"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/seat/seat": {
-      "url": "/admin/static/components/page/seat/seat.js",
+      "url": "/bus/static/components/page/seat/seat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
         "main/check"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/history/history": {
-      "url": "/admin/static/components/page/history/history.js",
+      "url": "/bus/static/components/page/history/history.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
         "pager/pager"
-      ]
+      ],
+      "pkg": "p2"
     },
     "components/page/system/config": {
-      "url": "/admin/static/components/page/system/config.js",
+      "url": "/bus/static/components/page/system/config.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service"
-      ]
+      ],
+      "pkg": "p2"
     },
-    "component_modules/director": {
-      "url": "/admin/static/component_modules/director.js",
-      "type": "js"
-    },
-    "components/page/desk/desk": {
-      "url": "/admin/static/components/page/desk/desk.js",
+    "main/pintuer": {
+      "url": "/bus/static/components/component/main/pintuer.js",
       "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service"
-      ]
+      "pkg": "p2"
     },
-    "loading/loading": {
-      "url": "/admin/static/components/component/loading/loading.js",
+    "components/page/home/home": {
+      "url": "/bus/static/components/page/home/home.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
-      ]
-    },
-    "nav/nav": {
-      "url": "/admin/static/components/component/nav/nav.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue"
-      ]
-    },
-    "main/main": {
-      "url": "/admin/static/components/component/main/main.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "component_modules/director",
-        "components/page/desk/desk",
-        "main/service",
-        "loading/loading",
-        "nav/nav"
-      ]
+      ],
+      "pkg": "p2"
     }
   },
-  "pkg": {}
+  "pkg": {
+    "p0": {
+      "url": "/bus/static/pkg/common_cd80228.js",
+      "type": "js"
+    },
+    "p2": {
+      "url": "/bus/static/pkg/app_fb2afa4.js",
+      "type": "js"
+    }
+  }
 });</script>
-<script src="/admin/static/js/jquery.min.js"></script>
-<script src="/admin/static/js/respond.js"></script>
-<script src="/admin/static/js/lrz.pc.min.js"></script>
-<script src="/admin/static/js/laydate/laydate.js"></script>
-<script type="text/javascript" src="/admin/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
-<script language="javascript" type="text/javascript" src="/admin/static/js/date97/WdatePicker.js"></script>
+<script src="/bus/static/js/jquery.min.js"></script>
+<script src="/bus/static/js/respond.js"></script>
+<script src="/bus/static/js/lrz.pc.min.js"></script>
+<script src="/bus/static/js/laydate/laydate.js"></script>
+<script type="text/javascript" src="/bus/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
+<script language="javascript" type="text/javascript" src="/bus/static/js/date97/WdatePicker.js"></script>
 <script type="text/javascript">
 
     var CONFIG = {
