--- a/src/main/resources/webapp/bus/admin/index.html
+++ b/src/main/resources/webapp/bus/admin/index.html
@@ -7,7 +7,7 @@
     <meta name="renderer" content="webkit"><title>通勤车安全乘坐管理平台</title>
     
 
-    <link rel="stylesheet" href="/bus/static/pkg/all_4a5a288.css" />
+    <link rel="stylesheet" href="/bus/admin/static/pkg/all_f475e42.css" />
     <style>
         .admin-nav ul {
             display: none;
@@ -22,42 +22,42 @@
     <c-loading show="{{loading}}"></c-loading>
 </div>
 
-<script src="/bus/static/js/mod.js"></script>
+<script src="/bus/admin/static/js/mod.js"></script>
 <script>/*resourcemap*/
 require.resourceMap({
   "res": {
     "component_modules/vue": {
-      "url": "/bus/static/component_modules/vue.js",
+      "url": "/bus/admin/static/component_modules/vue.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/director": {
-      "url": "/bus/static/component_modules/director.js",
+      "url": "/bus/admin/static/component_modules/director.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/iscroll-zoom": {
-      "url": "/bus/static/component_modules/iscroll-zoom.js",
+      "url": "/bus/admin/static/component_modules/iscroll-zoom.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/jquery.min": {
-      "url": "/bus/static/component_modules/jquery.min.js",
+      "url": "/bus/admin/static/component_modules/jquery.min.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/marked": {
-      "url": "/bus/static/component_modules/marked.js",
+      "url": "/bus/admin/static/component_modules/marked.js",
       "type": "js",
       "pkg": "p0"
     },
     "main/service": {
-      "url": "/bus/static/components/component/main/service.js",
+      "url": "/bus/admin/static/components/component/main/service.js",
       "type": "js",
       "pkg": "p2"
     },
     "loading/loading": {
-      "url": "/bus/static/components/component/loading/loading.js",
+      "url": "/bus/admin/static/components/component/loading/loading.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -65,12 +65,12 @@ require.resourceMap({
       "pkg": "p2"
     },
     "main/check": {
-      "url": "/bus/static/components/component/main/check.js",
+      "url": "/bus/admin/static/components/component/main/check.js",
       "type": "js",
       "pkg": "p2"
     },
     "nav/nav": {
-      "url": "/bus/static/components/component/nav/nav.js",
+      "url": "/bus/admin/static/components/component/nav/nav.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -78,7 +78,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "main/main": {
-      "url": "/bus/static/components/component/main/main.js",
+      "url": "/bus/admin/static/components/component/main/main.js",
       "type": "js",
       "deps": [
         "component_modules/director",
@@ -89,7 +89,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "pager/pager": {
-      "url": "/bus/static/components/component/pager/pager.js",
+      "url": "/bus/admin/static/components/component/pager/pager.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -97,7 +97,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/user/user": {
-      "url": "/bus/static/components/page/user/user.js",
+      "url": "/bus/admin/static/components/page/user/user.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -108,7 +108,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/bus/bus": {
-      "url": "/bus/static/components/page/bus/bus.js",
+      "url": "/bus/admin/static/components/page/bus/bus.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -119,7 +119,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/order/order": {
-      "url": "/bus/static/components/page/order/order.js",
+      "url": "/bus/admin/static/components/page/order/order.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -128,7 +128,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/desk/desk": {
-      "url": "/bus/static/components/page/desk/desk.js",
+      "url": "/bus/admin/static/components/page/desk/desk.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -137,7 +137,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/company/company": {
-      "url": "/bus/static/components/page/company/company.js",
+      "url": "/bus/admin/static/components/page/company/company.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -148,7 +148,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/companyOrder/ticketsStats/ticketsStats": {
-      "url": "/bus/static/components/page/companyOrder/ticketsStats/ticketsStats.js",
+      "url": "/bus/admin/static/components/page/companyOrder/ticketsStats/ticketsStats.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -157,7 +157,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/companyOrder/busSeat/busSeat": {
-      "url": "/bus/static/components/page/companyOrder/busSeat/busSeat.js",
+      "url": "/bus/admin/static/components/page/companyOrder/busSeat/busSeat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -168,7 +168,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/companyOrder/companyOrder": {
-      "url": "/bus/static/components/page/companyOrder/companyOrder.js",
+      "url": "/bus/admin/static/components/page/companyOrder/companyOrder.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -180,7 +180,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/check/ticketsStats/ticketsStats": {
-      "url": "/bus/static/components/page/check/ticketsStats/ticketsStats.js",
+      "url": "/bus/admin/static/components/page/check/ticketsStats/ticketsStats.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -189,7 +189,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/check/busSeat/busSeat": {
-      "url": "/bus/static/components/page/check/busSeat/busSeat.js",
+      "url": "/bus/admin/static/components/page/check/busSeat/busSeat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -200,7 +200,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/check/check": {
-      "url": "/bus/static/components/page/check/check.js",
+      "url": "/bus/admin/static/components/page/check/check.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -212,7 +212,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/seat/seat": {
-      "url": "/bus/static/components/page/seat/seat.js",
+      "url": "/bus/admin/static/components/page/seat/seat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -222,7 +222,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/history/history": {
-      "url": "/bus/static/components/page/history/history.js",
+      "url": "/bus/admin/static/components/page/history/history.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -232,7 +232,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/system/config": {
-      "url": "/bus/static/components/page/system/config.js",
+      "url": "/bus/admin/static/components/page/system/config.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -241,12 +241,12 @@ require.resourceMap({
       "pkg": "p2"
     },
     "main/pintuer": {
-      "url": "/bus/static/components/component/main/pintuer.js",
+      "url": "/bus/admin/static/components/component/main/pintuer.js",
       "type": "js",
       "pkg": "p2"
     },
     "components/page/home/home": {
-      "url": "/bus/static/components/page/home/home.js",
+      "url": "/bus/admin/static/components/page/home/home.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -256,21 +256,21 @@ require.resourceMap({
   },
   "pkg": {
     "p0": {
-      "url": "/bus/static/pkg/common_cd80228.js",
+      "url": "/bus/admin/static/pkg/common_cd80228.js",
       "type": "js"
     },
     "p2": {
-      "url": "/bus/static/pkg/app_fb2afa4.js",
+      "url": "/bus/admin/static/pkg/app_beadb80.js",
       "type": "js"
     }
   }
 });</script>
-<script src="/bus/static/js/jquery.min.js"></script>
-<script src="/bus/static/js/respond.js"></script>
-<script src="/bus/static/js/lrz.pc.min.js"></script>
-<script src="/bus/static/js/laydate/laydate.js"></script>
-<script type="text/javascript" src="/bus/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
-<script language="javascript" type="text/javascript" src="/bus/static/js/date97/WdatePicker.js"></script>
+<script src="/bus/admin/static/js/jquery.min.js"></script>
+<script src="/bus/admin/static/js/respond.js"></script>
+<script src="/bus/admin/static/js/lrz.pc.min.js"></script>
+<script src="/bus/admin/static/js/laydate/laydate.js"></script>
+<script type="text/javascript" src="/bus/admin/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
+<script language="javascript" type="text/javascript" src="/bus/admin/static/js/date97/WdatePicker.js"></script>
 <script type="text/javascript">
 
     var CONFIG = {
