--- a/src/main/resources/webapp/bus/admin/login.html
+++ b/src/main/resources/webapp/bus/admin/login.html
@@ -34,6 +34,7 @@
                                 </div>
                             </div>
                         </div>
+                        <input type="hidden" name="redirect" value="/bus/admin/index.html">
                         <div class="panel-foot text-center"><button class="button button-block bg-main text-big">立即登录后台</button></div>
                     </div>
                 </form>
