--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="renderer" content="webkit">    <title>订餐系统</title>
 
-    <link rel="stylesheet" href="/order/static/pkg/all_5998f58.css" />
+    <link rel="stylesheet" href="/order/static/pkg/all_eef0a27.css" />
 </head>
 <body id="app" >
-<router-view  keep-alive></router-view><!--<script src="/static/js/fastclick.js"></script>-->
+<router-view  keep-alive></router-view>
 <script src="/order/static/js/mod.js"></script>
 <script>/*resourcemap*/
 require.resourceMap({
@@ -243,13 +243,14 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_ea32e0c.js",
+      "url": "/order/static/pkg/app_08bace1.js",
       "type": "js"
     }
   }
 });</script>
 <script src="http://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
 <script src="/order/static/js/layer/layer.js"></script>
+<script src="/order/static/js/fastclick.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
