--- a/src/main/resources/webapp/order/goods.html
+++ b/src/main/resources/webapp/order/goods.html
@@ -252,6 +252,7 @@ require.resourceMap({
 <script src="/order/static/js/layer/layer.js"></script>
 <script src="/order/static/js/fastclick.js"></script>
 <script type="text/javascript">
+    var PAGE = "goods";
     require(["main/main.js"]);
 </script>
 </body>
