--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -243,7 +243,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_7da8f2e.js",
+      "url": "/order/static/pkg/app_0041293.js",
       "type": "js"
     }
   }
@@ -252,6 +252,7 @@ require.resourceMap({
 <script src="/order/static/js/layer/layer.js"></script>
 <script src="/order/static/js/fastclick.js"></script>
 <script type="text/javascript">
+    var THEAPP = "food";
     require(["main/main.js"]);
 </script>
 </body>
