--- a/src/main/resources/webapp/order/goods.html
+++ b/src/main/resources/webapp/order/goods.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="renderer" content="webkit">    <title>订餐系统</title>
+    <meta name="renderer" content="webkit">    <title>微信订货</title>
 
     <link rel="stylesheet" href="/order/static/pkg/all_99386a4.css" />
 </head>
@@ -243,7 +243,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_0041293.js",
+      "url": "/order/static/pkg/app_efd1502.js",
       "type": "js"
     }
   }
