--- a/src/main/resources/webapp/order/index.html
+++ b/src/main/resources/webapp/order/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="renderer" content="webkit">    <title>微信订餐</title>
 
-    <link rel="stylesheet" href="/order/static/pkg/all_99386a4.css" />
+    <link rel="stylesheet" href="/order/static/pkg/all_afff891.css" />
 </head>
 <body id="app" >
 <router-view  keep-alive></router-view>
@@ -82,6 +82,11 @@ require.resourceMap({
     },
     "main/service": {
       "url": "/order/static/components/component/main/service.js",
+      "type": "js",
+      "pkg": "p1"
+    },
+    "loading/index": {
+      "url": "/order/static/components/component/loading/index.js",
       "type": "js",
       "pkg": "p1"
     },
@@ -235,6 +240,26 @@ require.resourceMap({
         "nav/nav"
       ],
       "pkg": "p1"
+    },
+    "components/page/history/history": {
+      "url": "/order/static/components/page/history/history.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "loading/index"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/history/detail/detail": {
+      "url": "/order/static/components/page/history/detail/detail.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "loading/index"
+      ],
+      "pkg": "p1"
     }
   },
   "pkg": {
@@ -243,7 +268,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/static/pkg/app_2cec42e.js",
+      "url": "/order/static/pkg/app_53fa89d.js",
       "type": "js"
     }
   }
